# oop-project-21-22

./: CMakeLists.txt  LICENSE
app/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  LZW.hpp  archive_parser.hpp  compressor_base.hpp  crc32.hpp  noop_copressor.hpp
src/: CMakeLists.txt  LZW.cpp  archive_parser.cpp
tests/: CMakeLists.txt  archive_parser_test.cpp
